istio/istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer-svc
spec:
  host: customer-svc
  subsets:
  - name: customer-svc
    labels:
      app: customer
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: order
spec:
  host: order
  subsets:
  - name: order
    labels:
      app: order
---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: ratings
# spec:
#   host: ratings
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
#   - name: v2-mysql
#     labels:
#       version: v2-mysql
#   - name: v2-mysql-vm
#     labels:
#       version: v2-mysql-vm
---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: details
# spec:
#   host: details
#   subsets:
#   - name: v1
#     labels:
#       version: v1
#   - name: v2
#     labels:
#       version: v2
---
